# cmph

./: CMakeLists.txt  README.md
cmph-2.0.2/: CMakeLists.txt
cmph-2.0.2/examples/: file_adapter_ex2.c  keys.txt  small_set_ex4.c  struct_vector_adapter_ex3.c  vector_adapter_ex1.c
cmph-2.0.2/src/: bdz.c  bdz.h  bdz_ph.c  bdz_ph.h  bdz_structs.h  bdz_structs_ph.h  bitbool.h  bmz.c  bmz.h  bmz8.c  bmz8.h  bmz8_structs.h  bmz_structs.h  brz.c  brz.h  brz_structs.h  buffer_entry.c  buffer_entry.h  buffer_manager.c  buffer_manager.h  chd.c  chd.h  chd_ph.c  chd_ph.h  chd_structs.h  chd_structs_ph.h  chm.c  chm.h  chm_structs.h  cmph.c  cmph.h  cmph_benchmark.c  cmph_benchmark.h  cmph_structs.c  cmph_structs.h  cmph_time.h  cmph_types.h  compressed_rank.c  compressed_rank.h  compressed_seq.c  (+25 more)
cmph-2.0.2/tests/: cmph_benchmark_test.c  compressed_rank_tests.c  compressed_seq_tests.c  graph_tests.c  mphf_tests.c  packed_mphf_tests.c  select_tests.c
src/: cmph_test.c
